# jc-zed-tasks

./: .gitignore  Cargo.toml  README.md
src/: derive_aliases.rs  error.rs  main.rs
src/cli/: cmd.rs  exec_toggle.rs  executor.rs  mod.rs
src/support/: alacritty.rs  clipboard.rs  jsons.rs  mod.rs  os.rs  proc.rs  tomls.rs  zed.rs
src/support/mac/: common.rs  mod.rs  support.rs  types.rs
src/support/tmux/: list.rs  mod.rs  ops.rs  types.rs
