[package]
name = "jc-zed-tasks"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- CLI
clap = { version = "4", features = ["derive"] }
# -- File
simple-fs = "0.9.2"
# -- Others
derive_more = { version = "2", features = ["from", "display", "deref"] }
macro_rules_attribute = "0.2"
lazy-regex = "3"
