[package]
name = "jc-zed-tasks"
version = "0.1.6-WIP"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "rust binary project that consolidate many of my Zed Tasks JC is using"
categories = ["command-line-utilities"]
keywords = ["Zed","IDE"]
homepage = "https://github.com/jeremychone/jc-zed-tasks"
repository = "https://github.com/jeremychone/jc-zed-tasks"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- CLI
clap = { version = "4", features = ["derive"] }
# -- Text Formats
pulldown-cmark = "0.13.0"
toml = "0.8"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.28", features = ["serde"]}
# -- File
simple-fs = "0.9.2"
# -- OS
daemonize = "0.5.0"
arboard = "3.6.1"
home = "0.5"
# -- Image
image = { version = "0.25", default-features = false, features = ["png"] }
# -- Others
derive_more = { version = "2", features = ["from", "display", "deref"] }
macro_rules_attribute = "0.2"
lazy-regex = "3"
